build maid profile page

--- a/locale/ar.json
+++ b/locale/ar.json
@@ -17,5 +17,9 @@
     "newsletters": "الاشتراك في النشرات الإخبارية",
     "subscribeNow": "إشترك الآن",
     "terms": "شروط الخدمة",
-    "privacy": "سياسة الخصوصية"
+    "privacy": "سياسة الخصوصية",
+    "profileDetails": "تفاصيل الملف الشخصي",
+    "requestInterview": "طلب مقابلة",
+    "saveLater": "احفظ لوقت لاحق",
+    "call": "مكالمة"
 }
