--- a/locale/en.json
+++ b/locale/en.json
@@ -17,5 +17,9 @@
     "newsletters": "Subscribe Newsletters",
     "subscribeNow": "Subscribe Now",
     "terms": "Terms of Service",
-    "privacy": "Privacy Policy"
+    "privacy": "Privacy Policy",
+    "profileDetails": "Profile Details",
+    "requestInterview": "Request an Interview",
+    "saveLater": "Save for Later",
+    "call": "Call"
 }
