Authentication & edit the pages content

--- a/locale/ar.json
+++ b/locale/ar.json
@@ -21,5 +21,7 @@
     "profileDetails": "تفاصيل الملف الشخصي",
     "requestInterview": "طلب مقابلة",
     "saveLater": "احفظ لوقت لاحق",
-    "call": "مكالمة"
+    "call": "مكالمة",
+    "serviceTitle": "نحن في شركة النجوم للعمال المنزليين لدينا خطين رئيسيين للخدمة وهما",
+    "faqs": "التعليمات"
 }
