--- a/locale/en.json
+++ b/locale/en.json
@@ -21,5 +21,7 @@
     "profileDetails": "Profile Details",
     "requestInterview": "Request an Interview",
     "saveLater": "Save for Later",
-    "call": "Call"
+    "call": "Call",
+    "serviceTitle": "We at Al Nujoom Domestic workers have two main service lines which are",
+    "faqs": "Faqs"
 }
