Arabic | English - Services

--- a/locale/ar.json
+++ b/locale/ar.json
@@ -23,5 +23,22 @@
     "saveLater": "احفظ لوقت لاحق",
     "call": "مكالمة",
     "serviceTitle": "نحن في شركة النجوم للعمال المنزليين لدينا خطين رئيسيين للخدمة وهما",
-    "faqs": "التعليمات"
+    "faqs": "التعليمات",
+    "domestic": "خدمات العمالة المساعدة",
+    "domesticDesc": "لقد طورت وزاره الموارد البشرية والتوطين خدمات العمالة المساعدة الى عدة باقات لتخدم المجتمع بكافة احتجاجاته وتيسير عمليه التعاقد بين العمالة المساعد وأصحاب العمل",
+    "clearance": "خدمات التخليص والطباعة",
+    "clearanceDesc": "يقد المركز جميع خدمات الطباعة الحكومية المتعلقة بتأشيرات العمل والدخول للعمال المساعدة",
+    "serviceRequet": "طلب خدمة",
+    "traditional": "باقة تدبير التوسط الباقة التقليدية",
+    "temporary": "باقة تدبير التشغيل المؤقت المنتهي بالانتقال",
+    "flexible": "باقة تدبير المرنة",
+    "connect": "تواصل معنا",
+    "location": "العنوان",
+    "callCenter": "مركز الاتصال",
+    "eamil": "البريد الالكتروني",
+    "teamTitle": "فريقنا لديه مجموعة واسعة من الشخصيات الماهرة والمهنية",
+    "favourite": "قائمة الرغبات / المفضلة",
+    "upcoming": "المقابلات المنتظره",
+    "favouriteTitle": "قائمة الرغبات المحفوظة الخاصة بك",
+    "upcomingTitle": "قائمة المقابلة المجدولة"
 }
