--- a/locale/en.json
+++ b/locale/en.json
@@ -23,5 +23,22 @@
     "saveLater": "Save for Later",
     "call": "Call",
     "serviceTitle": "We at Al Nujoom Domestic workers have two main service lines which are",
-    "faqs": "Faqs"
+    "faqs": "Faqs",
+    "domestic": "Domestic workers Service Line",
+    "domesticDesc": "Ministry of Human Resources and Emiratization has developed domestic workers services into several packages to serve the community with all different domestic workers’ needs as well as to facilitate the contracting process between domestic workers and employers.",
+    "clearance": "Clearance and Typing services",
+    "clearanceDesc": "All government typing services pertaining to the employment and entry visas of domestic and household workers",
+    "serviceRequet": "Service Request Form",
+    "traditional": "Traditional Package",
+    "temporary": "Temporary Package",
+    "flexible": "Flexible Package",
+    "connect": "Connect with us",
+    "location": "Location",
+    "callCenter": "Call Center",
+    "eamil": "Email",
+    "teamTitle": "Our team has wide range of Skillful & Professional personalities",
+    "favourite": "Wishlist/Favourites",
+    "upcoming": "Upcoming Interviews",
+    "favouriteTitle": "Your Saved Wishlist",
+    "upcomingTitle": "List of Interview Scheduled"
 }
