find maids Arabic | English

--- a/locale/ar.json
+++ b/locale/ar.json
@@ -40,5 +40,10 @@
     "favourite": "قائمة الرغبات / المفضلة",
     "upcoming": "المقابلات المنتظره",
     "favouriteTitle": "قائمة الرغبات المحفوظة الخاصة بك",
-    "upcomingTitle": "قائمة المقابلة المجدولة"
+    "upcomingTitle": "قائمة المقابلة المجدولة",
+    "signOut": "تسجيل الخروج",
+    "signIn": "تسجيل",
+    "findMaid": "البحث عن مساعدات",
+    "findMaidTitle": "لدينا مجموعة واسعة من المساعدات الماهرات والمهنيات",
+    "NextPage": "الصفحة التالية"
 }
