--- a/locale/en.json
+++ b/locale/en.json
@@ -40,5 +40,10 @@
     "favourite": "Wishlist/Favourites",
     "upcoming": "Upcoming Interviews",
     "favouriteTitle": "Your Saved Wishlist",
-    "upcomingTitle": "List of Interview Scheduled"
+    "upcomingTitle": "List of Interview Scheduled",
+    "signOut": "Sign out",
+    "signIn": "Sign in",
+    "findMaid": "Find Maids",
+    "findMaidTitle": "We have wide range of Skillful & Professional Maids",
+    "NextPage": "Next Page"
 }
