implement findMaids next page

--- a/locale/en.json
+++ b/locale/en.json
@@ -45,5 +45,6 @@
     "signIn": "Sign in",
     "findMaid": "Find Maids",
     "findMaidTitle": "We have wide range of Skillful & Professional Maids",
-    "NextPage": "Next Page"
+    "nextPage": "Next Page",
+    "previousPage": "Previous Page"
 }
