--- a/locale/ar.json
+++ b/locale/ar.json
@@ -45,5 +45,6 @@
     "signIn": "تسجيل",
     "findMaid": "البحث عن مساعدات",
     "findMaidTitle": "لدينا مجموعة واسعة من المساعدات الماهرات والمهنيات",
-    "NextPage": "الصفحة التالية"
+    "nextPage": "الصفحة التالية",
+    "previousPage": "الصفحة السابقة"
 }
